SERVER-76560 Honor `expireAfterSeconds` for time-series pre-2018

(cherry picked from commit 21b7b619eeb6b23bee47ff493b708255fdf6d95e)