src/mongo/db/ttl.cpp
@@ -835,7 +835,7 @@ bool TTLMonitor::_deleteExpiredWithCollscan(OperationContext* opCtx,
 
     LOGV2_DEBUG(5400704, 1, "running TTL job for clustered collection", logAttrs(collection.nss()));
 
-    const auto startId = makeCollScanStartBound(collectionPtr, Date_t::min());
+    const auto startId = makeCollScanStartBound(collectionPtr, Date_t{});
 
     const auto expirationDate = safeExpirationDate(opCtx, collectionPtr, *expireAfterSeconds);
     const auto endId = makeCollScanEndBound(collectionPtr, expirationDate);
